# slosh

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build_wasm.sh  publish.sh  publish_testbeds.sh
.github/workflows/: ci.yaml
.run/: Test slosh.run.xml  testbed2d.run.xml  testbed3d.run.xml
crates/slosh-testbed2d/: Cargo.toml
crates/slosh-testbed3d/: Cargo.toml
crates/slosh2d/: Cargo.toml  build.rs
crates/slosh2d/examples/: centilever_beam2.rs  elastic_cut2.rs  elasticity2.rs  sand2.rs  testbed2.rs
crates/slosh3d/: Cargo.toml  build.rs
crates/slosh3d/examples/: centilever_beam3.rs  elastic_cut3.rs  heightfield3.rs  sand3.rs  testbed3.rs
crates/slosh_testbed2d/: Cargo.toml  build.rs
crates/slosh_testbed3d/: Cargo.toml  build.rs
shaders/slosh/: aliases.slang
shaders/slosh/collision/: collide.slang  trimesh.slang
shaders/slosh/grid/: grid.slang  sort.slang
shaders/slosh/models/: default.slang  drucker_prager.slang  interfaces.slang  linear_elasticity.slang  neo_hookean_elasticity.slang  specializations.slang  utils.slang
shaders/slosh/rbd/dynamics/: body.slang
shaders/slosh/rbd/queries/: contact.slang  projection.slang  ray.slang
shaders/slosh/rbd/shapes/: ball.slang  capsule.slang  cone.slang  cuboid.slang  cylinder.slang  segment.slang  shape.slang  triangle.slang
shaders/slosh/solver/: boundary_condition.slang  g2p.slang  g2p_cdf.slang  grid_update.slang  grid_update_cdf.slang  grid_update_collide.slang  p2g.slang  p2g_cdf.slang  p2g_scatter_style.slang  params.slang  particle.slang  particle_update.slang  rigid_impulses.slang  rigid_particle_update.slang  timestep_bound.slang
shaders_testbed/slosh_testbed/: prep_readback2.slang  prep_readback3.slang
src/: lib.rs  pipeline.rs  trimesh.rs
src/grid/: grid.rs  mod.rs  prefix_sum.rs  sort.rs
src/models/: drucker_prager.rs  mod.rs
src/rbd/: mod.rs  shapes.rs
src/rbd/dynamics/: body.rs  integrate.rs  mod.rs
src/sampling/: mod.rs  sample_polyline.rs  sample_trimesh.rs
src/solver/: boundary_condition.rs  g2p.rs  g2p_cdf.rs  grid_update.rs  grid_update_cdf.rs  grid_update_collide.rs  mod.rs  p2g.rs  p2g_cdf.rs  params.rs  particle.rs  particle2d.rs  particle3d.rs  particle_model.rs  particle_update.rs  rigid_impulses.rs  rigid_particle_update.rs  timestep_bound.rs
src_testbed/: data.rs  lib.rs  prep_readback.rs  step.rs
validation_tests/: Cargo.toml  README.md
validation_tests/fenics/: README.md  elastic_beam.py
validation_tests/genesis/: bouncing_ball.py  dam_break.py  elastic_beam.py  sand_column.py
validation_tests/src/: harness.rs  lib.rs  main.rs  metrics.rs  viewer.rs
validation_tests/src/scenarios/: bouncing_ball.rs  dam_break.rs  elastic_beam.rs  mod.rs  sand_column.rs
