[workspace]
members = [
    "crates/slosh_testbed2d",
    "crates/slosh_testbed3d",
    "crates/slosh2d",
    "crates/slosh3d",
    "validation_tests",
]
resolver = "2"

[workspace.dependencies]
nalgebra = { version = "0.34", features = ["convert-bytemuck"] }
wgpu = { version = "27", features = ["naga-ir"] }
encase = "0.12"
bytemuck = { version = "1", features = ["derive"] }
async-channel = "2"
static_assertions = "1"

slang-hal = "0.3"
stensor = "0.3"

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2", "dim3"))',
] }

[patch.crates-io]
#slang-hal-derive = { path = "../slang-hal/crates/slang-hal-derive" }
#slang-hal-build = { path = "../slang-hal/crates/slang-hal-build" }
#slang-hal = { path = "../slang-hal/crates/slang-hal" }
#minislang = { path = "../slang-hal/crates/minislang" }
#stensor = { path = "../stensor" }
#nexus2d = { path = "../nexus/crates/nexus2d" }
#nexus3d = { path = "../nexus/crates/nexus3d" }

#slang-hal-derive = { git = "https://github.com/dimforge/slang-hal", branch = "comptime" }
#slang-hal-build = { git = "https://github.com/dimforge/slang-hal", branch = "comptime" }
#slang-hal = { git = "https://github.com/dimforge/slang-hal", branch = "comptime" }
#minislang = { git = "https://github.com/dimforge/slang-hal", branch = "comptime" }
#stensor = { git = "https://github.com/dimforge/stensor", branch = "comptime" }
#nexus2d = { git = "https://github.com/dimforge/nexus", branch = "comptime" }
#nexus3d = { git = "https://github.com/dimforge/nexus", branch = "comptime" }
