[package]
name = "slosh_validation_tests"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
default = ["dim3"]
dim3 = []

comptime = ["slosh3d/comptime"]
runtime = ["slosh3d/runtime"]

webgpu = ["slosh3d/webgpu"]
vulkan = ["slosh3d/vulkan"]
metal = ["slosh3d/metal"]
cpu = ["slosh3d/cpu"]
cuda = ["slosh3d/cuda"]

render = ["kiss3d"]

[dependencies]
nalgebra = { workspace = true }
wgpu = { workspace = true }
slang-hal = { workspace = true }
stensor = { workspace = true }
rapier3d = "0.31"

slosh3d = { version = "0.3", path = "../crates/slosh3d" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
approx = "0.5"

# Chart generation
plotters = "0.3"

# Spatial indexing for particle matching
rstar = "0.12"

# Rendering dependencies (optional)
kiss3d = { version = "0.37", features = ["vertex_index_u32", "egui"], optional = true }

[dependencies.pollster]
version = "0.4"

[dev-dependencies]
futures-test = "0.3"
serial_test = "3"
async-std = { version = "1", features = ["attributes"] }

[lib]
name = "slosh_validation"
path = "src/lib.rs"

[[bin]]
name = "run_validation"
path = "src/main.rs"
