[package]
name = "slosh_testbed2d"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "slosh_testbed2d"
path = "../../src_testbed/lib.rs"
required-features = ["dim2"]

[features]
dim2 = []
default = ["dim2"]

[dependencies]
nalgebra = { workspace = true, features = ["rand"] }
wgpu = { workspace = true }
bytemuck = { workspace = true }
async-channel = { workspace = true }
encase = { workspace = true }

slang-hal = { workspace = true }
stensor = { workspace = true }
nexus2d = "0.2"

futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
slosh2d = { path = "../slosh2d" }
regex = "1"

kiss3d = { version = "0.37", features = [ "vertex_index_u32", "egui" ] }
