[package]
name = "slosh2d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform GPU 2D Material Point Method implementation."
repository = "https://github.com/dimforge/slosh"
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"

[lints]
workspace = true

[lib]
name = "slosh2d"
path = "../../src/lib.rs"
required-features = ["dim2"]

[features]
default = ["dim2"]
dim2 = []

comptime = [ "nexus2d/comptime", "slosh_testbed2d/comptime" ]
runtime = [ "nexus2d/runtime", "slosh_testbed2d/runtime" ]

webgpu = [ "nexus2d/webgpu", "slosh_testbed2d/webgpu" ]
vulkan = [ "nexus2d/vulkan", "slosh_testbed2d/vulkan" ]
metal = [ "nexus2d/metal", "slosh_testbed2d/metal" ]
cpu = [ "nexus2d/cpu", "slosh_testbed2d/cpu" ]
cuda = [ "nexus2d/cuda", "slosh_testbed2d/cuda" ]

[dependencies]
nalgebra = { workspace = true }
wgpu = { workspace = true }
encase = { workspace = true }
slang-hal = { workspace = true }
stensor = { workspace = true }
bytemuck = { workspace = true }
static_assertions = { workspace = true }

#wgcore = "0.2"
#wgebra = "0.2"
nexus2d = "0.3"
bvh = "0.12.0"

# TODO: make rapier optional?
rapier2d = "0.31"

# For wasm?
getrandom = { version = "0.3.1", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }


[dev-dependencies]
nalgebra = { version = "0.34", features = ["rand"] }
futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
slosh_testbed2d = { path = "../slosh_testbed2d", features = ["dim2"], default-features = false }
kiss3d = { version = "0.37.0" }

[build-dependencies]
minislang = "0.3"
include_dir = "0.7"
slang-hal-build = "0.3"
nexus2d = "0.3" # to access its shaders at compile-time
