[package]
name = "slosh3d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform GPU 3D Material Point Method implementation."
repository = "https://github.com/dimforge/slosh"
version = "0.4.1"
edition = "2024"
license = "Apache-2.0"

[lints]
workspace = true

[lib]
name = "slosh3d"
path = "../../src/lib.rs"
required-features = ["dim3"]

[features]
default = ["dim3"]
dim3 = []

comptime = [ "stensor/comptime", "slosh_testbed3d/comptime" ]
runtime = [ "stensor/runtime", "slosh_testbed3d/runtime" ]
webgpu = [ "stensor/webgpu", "slosh_testbed3d/webgpu" ]

[dependencies]
nalgebra = { workspace = true }
wgpu = { workspace = true }
encase = { workspace = true }
bytemuck = { workspace = true }
slang-hal = { workspace = true }
stensor = { workspace = true }
static_assertions = { workspace = true }
regex = "1"
bvh = "0.12.0"

serde = "1"

# TODO: make rapier optional?
rapier3d = "0.31"

[dev-dependencies]
nalgebra = { version = "0.34", features = ["rand"] }
futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
slosh_testbed3d = { path = "../slosh_testbed3d" }
kiss3d = { version = "0.37.0" }

[build-dependencies]
minislang = "0.4"
include_dir = "0.7"
slang-hal-build = "0.4"
