[package]
name = "slosh_testbed2d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Testbed for the slosh GPU-based MPM physics simulation library (2D version)."
version = "0.7.0"
license = "Apache-2.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "slosh_testbed2d"
path = "../../src_testbed/lib.rs"
required-features = ["dim2"]

[features]
dim2 = []
default = ["dim2"]

comptime = ["slosh2d/comptime"]
runtime = ["slosh2d/runtime"]

webgpu = ["slosh2d/webgpu"]

[dependencies]
glam = { workspace = true }
nalgebra = { workspace = true, features = ["rand"] }
wgpu = { workspace = true }
bytemuck = { workspace = true }
async-channel = { workspace = true }
encase = { workspace = true }

slang-hal = { workspace = true }
stensor = { workspace = true }

futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
slosh2d = { version = "0.7", path = "../slosh2d" }
regex = "1"
web-time = "1"

kiss3d = { version = "0.37", features = ["vertex_index_u32", "egui"] }


[build-dependencies]
minislang = "0.4"
include_dir = "0.7"
slang-hal-build = "0.4"
