[package]
name = "slosh_testbed3d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Testbed for the slosh GPU-based MPM physics simulation library (3D version)."
version = "0.6.0"
license = "Apache-2.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "slosh_testbed3d"
path = "../../src_testbed/lib.rs"
required-features = ["dim3"]

[features]
dim3 = []
default = ["dim3"]

comptime = ["slosh3d/comptime"]
runtime = ["slosh3d/runtime"]

webgpu = ["slosh3d/webgpu"]

[dependencies]
glam = { workspace = true }
nalgebra = { workspace = true, features = ["rand"] }
wgpu = { workspace = true }
bytemuck = { workspace = true }
async-channel = { workspace = true }
encase = { workspace = true }

slang-hal = { workspace = true }
stensor = { workspace = true }

futures-test = "0.3"
serial_test = "3"
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
slosh3d = { version = "0.6", path = "../slosh3d" }
regex = "1"
web-time = "1"

kiss3d = { version = "0.37", features = ["vertex_index_u32", "egui"] }


[build-dependencies]
minislang = "0.4"
include_dir = "0.7"
slang-hal-build = "0.4"
